Refactor StateReader, StateWriter and FilePath handling to achieve testable structure